# abc_backoffice

./: .gitignore  .prettierrc  db.sqlite3  package.json  pyproject.toml  vite.config.js
assets/components/: Button.svelte  Loading.svelte
assets/scss/: app.scss
assets/utils/: api.js  date.js  toast.js
base/: views.py
base/templates/base/: home.html
core/: settings.py  urls.py
portfolio_snapshot/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  vite.config.js
portfolio_snapshot/dashboard_frontend/: App.svelte  main.js
portfolio_snapshot/dashboard_frontend/tabs/: PnL.svelte  SectorDistribution.svelte
portfolio_snapshot/frontend/: App.svelte  NavBar.svelte  main.js  routes.js
portfolio_snapshot/frontend/components/: CurrentHolding.svelte  CustomerSelect.svelte  (+4 more)
portfolio_snapshot/migrations/: 0001_initial.py  0002_transaction.py  0003_remove_transaction_share_type.py  0004_dailytransaction_delete_corporateaction_and_more.py  0005_corporateaction.py  0006_corporateactionsync.py
portfolio_snapshot/query/: current_holding.sql  queries.sql
portfolio_snapshot/services/: market_data.py
portfolio_snapshot/utils/: portfolio_calculations.py  sync_corporate_action.py
static/: CorporateAction.css  CorporateAction.js  Dashboard.js  ImportTransactions.js  NotFound.js  disclose-version.js  legacy.js  main.css  sweetalert2.all.js  toast.js
static/css/: app.css
static/js/: sidebar.js
static/portfolio_snapshot/: main.js
templates/: base.html  dashboard_layout.html
templates/includes/: topbar.html
templates/registration/: login.html
(+12 files in other folders)
