[project]
name = "abc-backoffice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "fastexcel>=0.19.0",
    "joblib>=1.5.3",
    "nepse",
    "openpyxl>=3.1.5",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
]

[tool.uv.sources]
nepse = { git = "https://github.com/basic-bgnr/NepseUnofficialApi" }
